k8s/infrastructure.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: backend-deployment

  namespace: test-app

spec:

  selector: { matchLabels: { app: backend } }

  template:

    metadata: { labels: { app: backend } }

    spec:

      containers:

      - name: backend

        # Початковий тег. Tekton автоматично замінить його на унікальний ID збірки

        image: registry.registry.svc.cluster.local:5000/test-app:main

        imagePullPolicy: IfNotPresent # <--- Оптимізовано для динамічних тегів

        ports: [{ containerPort: 3001 }]

        readinessProbe:

          httpGet:

            path: /api/health

            port: 3001

          initialDelaySeconds: 15

          periodSeconds: 5

          timeoutSeconds: 3
