k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: test-app
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector: { matchLabels: { app: mongodb } }
  template:
    metadata: { labels: { app: mongodb } }
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4
        ports: [{ containerPort: 27017 }]
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: test-app
  annotations:
    argocd.argoproj.io/sync-wave: "0" 
spec:
  selector: { app: mongodb }
  ports: [{ port: 27017, targetPort: 27017 }]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: test-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector: { app: backend }
  ports: [{ port: 3001, targetPort: 3001 }]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: test-app
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: test-app.barbariska.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: test-app
spec:
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
      - name: backend
        # Tekton знайде цей рядок і змінить 'main' на хеш збірки
        image: registry.registry.svc.cluster.local:5000/test-app:build-run-4b2eb
        imagePullPolicy: IfNotPresent
        ports: [{ containerPort: 3001 }]
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
